Fix overflow

--- a/src/layouts/Post/index.scss
+++ b/src/layouts/Post/index.scss
@@ -24,12 +24,19 @@
 
 :global {
   .phenomic-BodyContainer {
+    overflow-x: hidden;
+
     img {
       width: 100%;
     }
 
     a {
       color: #4492ff;
+    }
+
+    pre {
+      width: 100%;
+      overflow-x: scroll;
     }
 
     code {
